# Scruffy

./: .gitignore  README.md  dreamfast.py  pyproject.toml  requirements.txt
prompts/: aiprompts.json
src/: 3dviewer.py  __init__.py  json2manim.py
src/adapter/: blender_cli.py  blender_script.py  manim_cli.py  pyviewer_cli.py
src/orchestrator/: interactive.py
src/planner/: kitbash_presets.py  llm_kitbash.py  semantic_filter.py  structured_plan.py
src/util/: blender_path.py  env.py  llm_debug.py  log.py  paths.py  strict_schema.py
src/validate/: normalizer.py
tests/: bicyclegpt_kitbash.json  manual_3dviewer_test.py  tugboat_kitbash.json
